--- a/Depo/Depo/Presentation/UserStories/Start/TermsAndServices/View/TermsAndServicesScreen.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/TermsAndServices/View/TermsAndServicesScreen.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,8 +12,10 @@
             <connections>
                 <outlet property="acceptButton" destination="kkM-36-uGV" id="Ue8-fu-Mch"/>
                 <outlet property="checkboxesStack" destination="aEZ-sm-9UL" id="K6f-Po-2eV"/>
-                <outlet property="contenViewHeightConstraint" destination="g9r-JR-XPs" id="4Rq-K7-2Bk"/>
-                <outlet property="contentView" destination="WTC-UM-kQA" id="81N-TF-ger"/>
+                <outlet property="contenView" destination="NGr-cm-icG" id="mhh-wB-7Eq"/>
+                <outlet property="contenViewHeightConstraint" destination="Tck-f1-N5h" id="4se-42-2yf"/>
+                <outlet property="etkTextView" destination="c9R-e4-jwq" id="th0-wT-QPk"/>
+                <outlet property="eulaTextView" destination="WTC-UM-kQA" id="r10-D4-smm"/>
                 <outlet property="privacyPolicyTextView" destination="Khr-2R-F8m" id="TUd-UC-sjc"/>
                 <outlet property="privacyPolicyView" destination="t0s-px-gfW" id="ufn-7A-pm6"/>
                 <outlet property="scrollView" destination="wx0-Ty-pdf" id="2cr-dt-zJE"/>
@@ -36,16 +38,29 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="heF-JQ-sC2" userLabel="Container View">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="777"/>
                             <subviews>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WTC-UM-kQA">
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="NGr-cm-icG">
                                     <rect key="frame" x="22" y="56" width="331" height="300"/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <subviews>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WTC-UM-kQA">
+                                            <rect key="frame" x="0.0" y="0.0" width="331" height="145"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="c9R-e4-jwq">
+                                            <rect key="frame" x="0.0" y="155" width="331" height="145"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                            <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
+                                    </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="300" id="g9r-JR-XPs"/>
+                                        <constraint firstAttribute="height" constant="300" id="Tck-f1-N5h"/>
                                     </constraints>
-                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                </textView>
+                                </stackView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Lifebox!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Kb-k9-w6Q">
                                     <rect key="frame" x="109.5" y="21" width="156" height="25"/>
                                     <constraints>
@@ -81,21 +96,23 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
+                                <constraint firstItem="aEZ-sm-9UL" firstAttribute="top" secondItem="NGr-cm-icG" secondAttribute="bottom" constant="11" id="4sB-Be-abf"/>
                                 <constraint firstAttribute="height" priority="250" constant="603" id="6if-48-mrw"/>
-                                <constraint firstItem="WTC-UM-kQA" firstAttribute="leading" secondItem="heF-JQ-sC2" secondAttribute="leading" constant="22" id="IFt-9p-mnX"/>
-                                <constraint firstItem="aEZ-sm-9UL" firstAttribute="top" secondItem="WTC-UM-kQA" secondAttribute="bottom" constant="11" id="Ifg-jX-3Pb"/>
-                                <constraint firstItem="WTC-UM-kQA" firstAttribute="top" secondItem="9Kb-k9-w6Q" secondAttribute="bottom" constant="10" id="Lui-dI-oc8"/>
+                                <constraint firstItem="NGr-cm-icG" firstAttribute="leading" secondItem="heF-JQ-sC2" secondAttribute="leading" constant="22" id="IpH-nZ-8kx"/>
+                                <constraint firstAttribute="trailing" secondItem="NGr-cm-icG" secondAttribute="trailing" constant="22" id="Jht-g7-a0V"/>
                                 <constraint firstItem="t0s-px-gfW" firstAttribute="top" secondItem="aEZ-sm-9UL" secondAttribute="bottom" constant="10" id="U8v-U4-FeN"/>
+                                <constraint firstItem="aEZ-sm-9UL" firstAttribute="leading" secondItem="NGr-cm-icG" secondAttribute="leading" constant="2" id="XZ2-JO-JHt"/>
                                 <constraint firstItem="9Kb-k9-w6Q" firstAttribute="top" secondItem="heF-JQ-sC2" secondAttribute="top" constant="21" id="Xpf-ka-piJ">
                                     <variation key="widthClass=regular" constant="50"/>
                                 </constraint>
-                                <constraint firstItem="aEZ-sm-9UL" firstAttribute="trailing" secondItem="WTC-UM-kQA" secondAttribute="trailing" constant="-2" id="bkx-nz-JO6"/>
-                                <constraint firstItem="aEZ-sm-9UL" firstAttribute="leading" secondItem="WTC-UM-kQA" secondAttribute="leading" constant="2" id="dvv-UV-FUs"/>
-                                <constraint firstAttribute="trailing" secondItem="WTC-UM-kQA" secondAttribute="trailing" constant="22" id="f7i-sh-hWx"/>
+                                <constraint firstItem="aEZ-sm-9UL" firstAttribute="leading" secondItem="heF-JQ-sC2" secondAttribute="leading" constant="24" id="ezp-9Q-LyK"/>
                                 <constraint firstItem="9Kb-k9-w6Q" firstAttribute="centerX" secondItem="heF-JQ-sC2" secondAttribute="centerX" id="hGm-ro-4kj"/>
                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="t0s-px-gfW" secondAttribute="bottom" constant="80" id="jAv-Uk-2ZF"/>
                                 <constraint firstItem="t0s-px-gfW" firstAttribute="leading" secondItem="heF-JQ-sC2" secondAttribute="leading" constant="20" symbolic="YES" id="joD-2r-tt3"/>
+                                <constraint firstItem="aEZ-sm-9UL" firstAttribute="trailing" secondItem="NGr-cm-icG" secondAttribute="trailing" constant="-2" id="qCU-BJ-xNW"/>
                                 <constraint firstAttribute="trailing" secondItem="t0s-px-gfW" secondAttribute="trailing" constant="20" symbolic="YES" id="r0V-Le-MEF"/>
+                                <constraint firstItem="NGr-cm-icG" firstAttribute="top" secondItem="9Kb-k9-w6Q" secondAttribute="bottom" constant="10" id="sH0-9U-jVi"/>
+                                <constraint firstItem="aEZ-sm-9UL" firstAttribute="centerX" secondItem="t0s-px-gfW" secondAttribute="centerX" id="w7F-pp-09s"/>
                             </constraints>
                         </view>
                     </subviews>
