--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/FileInfoView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/FileInfoView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,6 +25,7 @@
                 <outlet property="fileSizeLabel" destination="0h5-wF-X2b" id="Ucr-JO-95S"/>
                 <outlet property="fileSizeTitleLabel" destination="ErC-7t-dmO" id="1w9-QK-TSl"/>
                 <outlet property="peopleCollectionView" destination="XGQ-57-yav" id="0eE-vk-mVG"/>
+                <outlet property="peopleStackView" destination="6ph-Of-RdC" id="xCf-90-D73"/>
                 <outlet property="peopleTitleLabel" destination="k4x-ud-NF0" id="byQ-dZ-wRp"/>
                 <outlet property="premiumButton" destination="jNm-bk-5oX" id="Wvk-5V-5tO"/>
                 <outlet property="premiumStackView" destination="Ndh-L6-gxh" id="OGj-lN-UM2"/>
