--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/MainScreen/Views/ContactSyncNoBackupView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/MainScreen/Views/ContactSyncNoBackupView.xib
@@ -14,9 +14,6 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IAI-In-38V">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jb6-gk-zjc">
                     <rect key="frame" x="166.5" y="64" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -33,30 +30,34 @@
                     <rect key="frame" x="142" y="158" width="91" height="114"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MPu-ha-F83" customClass="RoundedInsetsButton" customModule="LifeTech_lifedrive" customModuleProvider="target">
-                    <rect key="frame" x="164.5" y="573" width="46" height="30"/>
+                    <rect key="frame" x="164.5" y="455" width="46" height="30"/>
                     <state key="normal" title="Button"/>
                     <connections>
                         <action selector="backUp:" destination="iN0-l3-epB" eventType="touchUpInside" id="sew-qz-uqR"/>
                     </connections>
                 </button>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="contact_sync_stage_2_nobackup_clouds" translatesAutoresizingMaskIntoConstraints="NO" id="bmk-yZ-yPW">
+                    <rect key="frame" x="0.0" y="296" width="375" height="135"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
                 <constraint firstItem="Tia-GQ-v25" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="32" id="3Bv-li-dQe"/>
                 <constraint firstItem="Tia-GQ-v25" firstAttribute="top" secondItem="jb6-gk-zjc" secondAttribute="bottom" constant="20" id="6cr-vT-LlN"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="MPu-ha-F83" secondAttribute="bottom" constant="32" id="70H-0s-2S1"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="bmk-yZ-yPW" secondAttribute="trailing" id="8hF-Tj-Wf7"/>
                 <constraint firstItem="E7z-FN-x2b" firstAttribute="top" secondItem="Tia-GQ-v25" secondAttribute="bottom" constant="32" id="CDZ-oe-60z"/>
+                <constraint firstItem="bmk-yZ-yPW" firstAttribute="top" secondItem="E7z-FN-x2b" secondAttribute="bottom" constant="24" id="KFP-cm-fhi"/>
                 <constraint firstItem="jb6-gk-zjc" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="MIt-07-Or7"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="MPu-ha-F83" secondAttribute="bottom" constant="64" id="QUm-rn-lx8"/>
+                <constraint firstItem="MPu-ha-F83" firstAttribute="top" secondItem="bmk-yZ-yPW" secondAttribute="bottom" constant="24" id="MPK-6r-Kmc"/>
                 <constraint firstItem="jb6-gk-zjc" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="64" id="Rix-UD-Ofb"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Tia-GQ-v25" secondAttribute="trailing" constant="32" id="XR1-ze-7oO"/>
                 <constraint firstItem="E7z-FN-x2b" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="YWM-fn-1Fm"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="IAI-In-38V" secondAttribute="bottom" id="eFz-Zp-xbE"/>
                 <constraint firstItem="Tia-GQ-v25" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="fc9-GO-Oys"/>
+                <constraint firstItem="bmk-yZ-yPW" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="lBy-8e-3RB"/>
                 <constraint firstItem="MPu-ha-F83" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="qps-8a-pAC"/>
-                <constraint firstItem="IAI-In-38V" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="up9-AM-LWt"/>
-                <constraint firstItem="IAI-In-38V" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="vwW-rf-59d"/>
-                <constraint firstItem="IAI-In-38V" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="xkD-zK-FxQ"/>
             </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="actionButton" destination="MPu-ha-F83" id="ymd-Cn-xfQ"/>
@@ -68,5 +69,6 @@
     </objects>
     <resources>
         <image name="contact_sync_stage_2_agenda" width="91" height="114"/>
+        <image name="contact_sync_stage_2_nobackup_clouds" width="375" height="135"/>
     </resources>
 </document>
